--- a/index.html
+++ b/index.html
@@ -1,5 +1,22 @@
 <html>
-	<body>
-		Coding Jojo
-	</body>
+
+<header>
+	<link rel="stylesheet" href="./style.css">
+</header>
+
+<body>
+	<div class="page-container">
+		<div class="side-bar">
+			<div class="side-bar-nav">Coding Jojo</div>
+			<div class="side-bar-nav">Portfolio</div>
+			<div class="side-bar-nav">About Jojo</div>
+		</div>
+		<div class="main-content">
+			Coding Jojo
+		</div>
+	</div>	
+</body>
+
+<script src="./main.js"></script>
+
 </html>
