--- a/assets/portfolio/portfolio.html
+++ b/assets/portfolio/portfolio.html
@@ -1,19 +1,19 @@
 <html>
 
 <header>
-	<link rel="stylesheet" href="./style.css">
+	<link rel="stylesheet" href="../../style.css">
 </header>
 
 <body>
 	<div class="page-container">
 		<div class="side-bar">
 			<div class="side-bar-nav header">
-				<a href="./index.html">
+				<a href="../../index.html">
 					Coding Jojo
 				</a>
 			</div>
 			<div class="side-bar-nav">
-				<a href="./assets/portfolio/portfolio.html">
+				<a href="./portfolio.html">
 					Portfolio
 				</a>
 			</div>
@@ -24,11 +24,11 @@
 			</div>
 		</div>
 		<div class="main-content">
-			Jojo's coding dojo
+			Jojo's Portfolio!
 		</div>
 	</div>	
 </body>
 
-<script src="./main.js"></script>
+<script src="../../main.js"></script>
 
 </html>
