--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 		<div class="side-bar">
 			<div class="side-bar-nav header">
 				<a href="./index.html">
-					Coding Jojo
+					Coding Jojo's Dojo
 				</a>
 			</div>
 			<div class="side-bar-nav">
