--- a/index.html
+++ b/index.html
@@ -1,32 +1,61 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
 
-<header>
+<head>
+	<meta charset="utf-8">
 	<link rel="stylesheet" href="./style.css">
-</header>
+</head>
 
 <body>
-	<div class="page-container">
-		<div class="side-bar">
-			<div class="side-bar-nav header">
-				<a href="./index.html">
-					Coding Jojo
-				</a>
-			</div>
-			<div class="side-bar-nav">
-				<a href="./assets/portfolio/portfolio.html">
-					Portfolio
-				</a>
-			</div>
-			<div class="side-bar-nav">
-				<a>
-					About Jojo
-				</a>
-			</div>
+	<div class="topnav">
+		<a class="active" href="#home">Home</a>
+		<div class="link-container">
+			<a href="#30weeks.html">30 Weeks of Coding</a>
+			<a href="#projects">Projects</a>
+			<a href="#about">About</a>
+			<a href="#tech">Tech</a>
+			<a href="#contact">Contact</a>
 		</div>
-		<div class="main-content">
-			Jojo's coding dojo
+	</div>
+
+	<div class="introduction">
+		<h2>Hi, I'm Joanna.  
+	
+		<h3>I'm creating this website from scratch using HTML, CSS, JavaScript, and Bootstrap to help me learn to code.  I've embarked on my <a href="#30weeks.html">30 Weeks of Coding</a> journey <strong class="heavy">5</strong> weeks ago.</h3>
+	</div>
+
+	<footer>
+		<div class="connect">
+			Joanna Chang | 2020
 		</div>
-	</div>	
+	</div>
+</div>
+</footer>
+
+
+
+	<!-- <div class="page-container"> -->
+		<!-- <div class="side-bar"> -->
+			<!-- <div class="side-bar-nav header"> -->
+				<!-- <a href="./index.html"> -->
+					<!-- Coding Jojo -->
+				<!-- </a> -->
+			<!-- </div> -->
+			<!-- <div class="side-bar-nav"> -->
+				<!-- <a href="./assets/portfolio/portfolio.html"> -->
+					<!-- Portfolio -->
+				<!-- </a> -->
+			<!-- </div> -->
+			<!-- <div class="side-bar-nav"> -->
+				<!-- <a> -->
+					<!-- About Jojo -->
+				<!-- </a> -->
+			<!-- </div> -->
+		<!-- </div> -->
+		<!-- <div class="main-content"> -->
+			<!-- Jojo's coding dojo -->
+		<!-- </div> -->
+	<!-- </div>	 -->
 </body>
 
 <script src="./main.js"></script>
