--- a/tech.html
+++ b/tech.html
@@ -14,7 +14,8 @@
 	<link rel="stylesheet" href="node_modules/bootstrap-social/bootstrap-social.css" />
 	
     <link rel="stylesheet" href="./style.css">
-  </head>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/konpa/devicon@master/devicon.min.css">
+ </head>
 
 <body>
     <div class="topnav">
@@ -30,17 +31,29 @@
 
 <div class="page-container">
     <div class="col-md-12">
-        <div class="projects">
-            <h2>About Me</h2>
+        <div class="technologies">
+            <h2>Tech Skills</h2>
         </div>
+    <div class="col-4 col-md-4 large-text">
+        <i class="devicon-bootstrap-plain"></i>
+        <i class="devicon-css3-plain"></i>
+        <i class="devicon-html5-plain"></i>
     </div>
-
-
-    <div class="container">
-        <p><img src = "illustrationphoto.jpg" alt= "Joanna Chang" id="img" width="200"/></p> 
-        <p><strong>My name is Joanna and I am an analytics professional aspring to become a full-stack developer.</strong></p> 
-        <p>My passion for data, organization, creation, and problem solving have motivated me to learn coding.  I am receiving training from an engineering bootcamp called NuCamp, and my tech stack includes HTML, CSS, JavaScript, and Bootstrap - but I am still learning and branching into new languages and frameworks.</p>  <p>I am currently seeking a position where I could gain new experiences while leveraging the skills I have acquired.  If your team has an opportunity and believes there is a match, please don't hesitate to <a href="contact.html" class="weeks">contact me.</a></p> 
-        <p>I enjoy exploring the Bay Area with my beau, dancing, and traveling around the world.  Recent favorites include Israel, Kenya, Tanzania, and Myanmar.</p>
+    <div class="col-4 col-md-4 large-text">
+        <i class="devicon-git-plain"></i>
+        <i class="devicon-github-plain"></i>
+        <i class="devicon-gitlab-plain"></i>
+    </div>
+    <div class="col-4 col-md-4 large-text">
+        <i class="devicon-javascript-plain"></i>
+        <i class="devicon-nodejs-plain"></i>
+        <i class="devicon-npm-original-wordmark"></i>
+    </div>
+    <div class="col-4 col-md-4 large-text">
+        <i class="devicon-react-original"></i>
+        <i class="devicon-visualstudio-plain"></i>
+        <i class="devicon-mongodb-plain"></i>
+    </div>
     </div>
 </div>
 
