--- a/projects.html
+++ b/projects.html
@@ -32,37 +32,38 @@
        <div class="col-md-12">
           <div class="projects">
               <h2>Projects</h2>
-              <h4>Portfolio in progress.  Please check back soon!</h4>
+              <h4>Portfolio in progress.  Please check back for more soon!</h4>
           </div>
       </div>
 
       <div class="container projects">
-          <div class="row">
-            <div class="col-12 col-sm-6">
-              Project One 
+          <div class="row align-middle">
+            <div class="col-12 col-sm-6 my-auto">
+              <h4>Personal Portfolio</h4>
+                <p>My personal portfolio website built within 4 weeks of learning about programming, highlighting my coding journey and showcasing my projects.</p>
+                <p>Technologies used: HTML, CSS, Bootstrap, and JavaScript.</p> 
             </div>
             <div class="col-12 col-sm-6">
-              Project Two
+              <h4>YouDance</h4>
+                <p>An on-demand dance fitness video platform for users to search YouTube videos by dance type, intensity level, and number of views.</p>
+                <p>Technologies used: HTML, CSS, Bootstrap, and JavaScript.</p>
             </div>   
           </div>
           <div class="row">
             <div class="col-12 col-sm-6">
-              Project Three
+              <h4>Project in progress!</h4>
+              <p></p>
+              <p></p>
             </div>
             <div class="col-12 col-sm-6">
-              Project Four
+              <h4>Project in progress!</h4>
+              <p></p>
+              <p></p>
             </div>   
-          </div>  
-          <div class="row">
-            <div class="col-12 col-sm-6">
-              Project Five
-            </div>
-            <div class="col-12 col-sm-6">
-              Project Six
-            </div>     
-          </div>
-      </div>   
-</div>
+          </div>     
+      </div>
+</div>   
+
 
 
 
