--- a/about.html
+++ b/about.html
@@ -39,7 +39,7 @@
     <div class="container">
         <p><img src = "illustrationphoto.jpg" alt= "Joanna Chang" id="img" width="200"/></p> 
         <p><strong>My name is Joanna and I am an analytics professional aspring to become a full-stack developer.</strong></p> 
-        <p>My passion for data, organization, creation, and problem solving have motivated me to learn coding.  I am receiving training from an engineering bootcamp called NuCamp, and my tech stack includes HTML, CSS, JavaScript, and Bootstrap - but I am still learning and branching into new languages and frameworks.</p>  <p>I am currently seeking a position where I could gain new experiences while leveraging the skills I have acquired.  If your team has an opportunity and believes there is a match, please don't hesitate to <a href="contact.html" class="weeks">contact me.</a></p> 
+        <p>My passion for data, organization, creation, and problem solving have motivated me to learn coding.  I am receiving training from an engineering bootcamp called NuCamp, and my tech stack includes HTML, CSS, Bootstrap, and JavaScript - but I am still learning and branching into new languages and frameworks.</p>  <p>I am currently seeking a position where I could gain new experiences while leveraging the skills I have acquired.  If your team has an opportunity and believes there is a match, please don't hesitate to <a href="contact.html" class="weeks">contact me.</a></p> 
         <p>I enjoy exploring the Bay Area with my beau, dancing, and traveling around the world.  Recent favorites include Israel, Kenya, Tanzania, and Myanmar.</p>
     </div>
 </div>
