--- a/index.html
+++ b/index.html
@@ -24,22 +24,22 @@
 				<a href="projects.html">Projects</a>
 				<a href="about.html">About</a>
 				<a href="tech.html">Tech</a>
+				<a href="https://github.com/joannahanchang">Github</a>
 				<a href="contact.html">Contact</a>
 			</div>
 		</div>
 
 	<div class="page-container">
 		<div class="introduction">
-			<h2>Hi, I'm Joanna. 
+			<h2>Hi, I'm Joanna.</h2>
 		
-			<h3>I'm creating this website from scratch using HTML, CSS, JavaScript, and Bootstrap to help me learn to code.  I've embarked on my <a href="30weeks.html" class="weeks">30 Weeks of Coding</a> journey 5 weeks ago.</h3>
+			<h3>I'm creating this website from scratch using HTML, CSS, JavaScript, and Bootstrap to help me learn to code.  I've embarked on my <a href="30weeks.html" class="weeks">30 Weeks of Coding</a> journey 9 weeks ago.</h3>
 
 		<form>
 			<button formaction="about.html" class="learnmore">Learn More About Me</button>
 		</form>
 
 		<!-- <button onclick="myFunction()">Click me</button> -->
-
 		</div>
 	</div>
 	<footer>
