add projects to Projects page

--- a/projects.html
+++ b/projects.html
@@ -32,31 +32,39 @@
        <div class="col-md-12">
           <div class="projects">
               <h2>Projects</h2>
-              <h4>Portfolio in progress.  Please check back for more soon!</h4>
+              <h3>Portfolio in progress.  Please check back for more soon!</h3>
           </div>
       </div>
 
       <div class="container projects">
-          <div class="row align-middle">
-            <div class="col-12 col-sm-6 my-auto">
-              <h4>Personal Portfolio</h4>
-                <p>My personal portfolio website built within 4 weeks of learning about programming, highlighting my coding journey and showcasing my projects.</p>
-                <p>Technologies used: HTML, CSS, Bootstrap, and JavaScript.</p> 
+          <div class="row">
+            <div class="col-12 col-sm-6">
+              <h3>Personal Portfolio</h3>
+                <a href="https://github.com/joannahanchang/joannahanchang.github.io">
+                <img src="portfoliowebsite.png" alt="Joanna Chang Portfolio Website" id="portfoliowebsite" height="150" width="550" class="center"/>
+                </a>
+                <p>My personal portfolio website highlighting my coding journey, showcasing my projects, and referencing to my Github page.</p>
+                <p>Built within 4 weeks of learning about programming.</p>
+                <p><strong>Technologies used: HTML, CSS, Bootstrap, and JavaScript.</strong></p> 
             </div>
             <div class="col-12 col-sm-6">
-              <h4>YouDance</h4>
+              <h3>YouDance</h3>
+                <a href="https://github.com/joannahanchang/YouDance">
+                <img src="youdance.png" alt="YouDance Project" id="youdance" height="150" width="550" class="center"/>
+                </a>
                 <p>An on-demand dance fitness video platform for users to search YouTube videos by dance type, intensity level, and number of views.</p>
-                <p>Technologies used: HTML, CSS, Bootstrap, and JavaScript.</p>
+                <p>Built within 8 weeks of learning about programming.</p>
+                <p><strong>Technologies used: HTML, CSS, Bootstrap, and JavaScript.</strong></p>
             </div>   
           </div>
           <div class="row">
             <div class="col-12 col-sm-6">
-              <h4>Project in progress!</h4>
+              <h3>Project in progress!</h3>
               <p></p>
               <p></p>
             </div>
             <div class="col-12 col-sm-6">
-              <h4>Project in progress!</h4>
+              <h3>Project in progress!</h3>
               <p></p>
               <p></p>
             </div>   
