--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 		<div class="introduction">
 			<h2>Hi, I'm Joanna.</h2>
 		
-			<h3>I'm creating this website from scratch using HTML, CSS, JavaScript, and Bootstrap to help me learn to code.  I've embarked on my <a href="30weeks.html" class="weeks">30 Weeks of Coding</a> journey 9 weeks ago.</h3>
+			<h3>I'm creating this website from scratch using HTML, CSS, Bootstrap, and JavaScript to help me learn to code.  I've embarked on my <a href="30weeks.html" class="weeks">30 Weeks of Coding</a> journey 9 weeks ago.</h3>
 
 		<form>
 			<button formaction="about.html" class="learnmore">Learn More About Me</button>
