--- a/30weeks.html
+++ b/30weeks.html
@@ -33,101 +33,39 @@
             <div class="contactme">
                 <h2>30 Weeks of Coding</h2> 
                 <h4>I am embarking on a 30-week long coding journey with NuCamp, an engineering bootcamp.</h4>
-                <h4>I am documenting my progress, highlighting the skills I have acquired, and showcasing the projects I have created.</h4>
+                <h4>I am documenting my progress, highlighting the knowledge and skills I have acquired, and showcasing the projects I have created.</h4>
             </div>
         </div>
         <div class="container-weeks">
             <div class="week-box">
-                Week 1
+                <p><a href="weeks1to4.html">Weeks 1 - 4:</a><p>
+                <p>Web Development Fundamentals, HTML, CSS, JavaScript.</p>
+             </div>
+            <div class="week-box">
+                <p>Weeks 5 - 9:</p>
+                <p>Front-End Web UI Framework, Bootstrap.</p>
             </div>
             <div class="week-box">
-                Week 2
+                <p>Weeks 10 - 14:</p>
+                <p>Front-End JavaScript Library, React.</p>
             </div>
             <div class="week-box">
-                Week 3
+                <p>Weeks 15 - 18:</p>
+                <p>Multi-platform Mobile App Development, React Native.</p>
             </div>
             <div class="week-box">
-                Week 4
+                <p>Weeks 19 - 22:</p>
+                <p>Server-side Development, Node.js, Express.js, and MongoDB.</p>
             </div>
             <div class="week-box">
-                Week 5
+                <p>Weeks 23 - 26:</p>
+                <p>Personal Development I.</p>
             </div>
             <div class="week-box">
-                Week 6
+                <p>Weeks 27 - 30:</p>
+                <p>Personal Development II</p>
             </div>
-            <div class="week-box">
-                Week 7
-            </div>
-            <div class="week-box">
-                Week 8
-            </div>
-            <div class="week-box">
-                Week 9
-            </div>
-            <div class="week-box">
-                Week 10
-            </div>
-            <div class="week-box">
-                Week 11
-            </div>
-            <div class="week-box">
-                Week 12
-            </div>
-            <div class="week-box">
-                Week 13
-            </div>
-            <div class="week-box">
-                Week 14
-            </div>
-            <div class="week-box">
-                Week 15
-            </div>
-            <div class="week-box">
-                Week 16
-            </div>
-            <div class="week-box">
-                Week 17
-            </div>
-            <div class="week-box">
-                Week 18
-            </div>
-            <div class="week-box">
-                Week 19
-            </div>
-            <div class="week-box">
-                Week 20
-            </div>
-            <div class="week-box">
-                Week 21
-            </div>
-            <div class="week-box">
-                Week 22
-            </div>
-            <div class="week-box">
-                Week 23
-            </div>
-            <div class="week-box">
-                Week 24
-            </div>
-            <div class="week-box">
-                Week 25
-            </div>
-            <div class="week-box">
-                Week 26
-            </div>
-            <div class="week-box">
-                Week 27
-            </div>
-            <div class="week-box">
-                Week 28
-            </div>
-            <div class="week-box">
-                Week 29
-            </div>
-            <div class="week-box">
-                Week 30
-            </div>
-        </div>    
+        </div>
     </div>
 
 <footer>
