add weeks 1 to 4

--- a/weeks1to4.html
+++ b/weeks1to4.html
@@ -90,19 +90,29 @@
                 <li>I learned 7 different types of array methods: shift, unshift, join, includes, and indexOf.  Shift removes an item from the beginning of an array, while unshift adds one more items to the beginning of an array.  Join takes all items in an array anda returns a string containing those items.  Includes is used to check if an item exists inside an array, and will return true or false.  IndexOf also checks if an item is in an array, but returns the index of the item if it exists in the array.</li>
                 <li>I learned about the math global object and math.random and math.floor to help generate random numbers.  Math.random()*6 for example can generate a number between 0-6, but not including 6.  Math.floor removes all digits to the right of the decimal point from a number.  If we want to generate a random number between 1-6 rather than 0-5, we can add 1 to the result: const randomInteger = Math.floor(Math.random()*6)+1.</li>
                 <li><strong>Code Challenges:</strong> There were 2 code challenges this week, which can be found in my CodePen: <a href="https://codepen.io/joannahanchang/pen/bGVXKQd">Variables and Functions Practice</a>and <a href="https://codepen.io/joannahanchang/pen/jOWNOww">Switch</a>.</li>
-                <li><strong>Project:</strong>I built a <a href="https://codepen.io/joannahanchang/pen/jOWJoJO">Number Guessing Game</a> using JavaScript, including functions, variables, arrays, operators, if statements, do...while loops, etc.</li>
+                <li><strong>Project:</strong> I built a <a href="https://codepen.io/joannahanchang/pen/jOWJoJO">Number Guessing Game</a> using JavaScript, including functions, variables, arrays, operators, if statements, do...while loops, etc.</li>
             </ul>
         </section>
         <br>
         <section id="week4">
             <h4>Week 4:</h4>
             <ul>
-                <li>...</li>
-                <li>...</li>
-                <li>...</li>
-                <li>...</li> 
-                <li>...</li>
-                <embed src="profile.pdf" alt= "profile" width="400" height="400"/>
+                <li>I learned the difference bewteen for looks and while loops: for loops are like while loops, but with built-in support for an incrementing iterator.  It is in this format: for(initialization; condition; final expression){.</li>
+                <li>For...of loops works with arrays and other iterables (data structures that contain lists of items that can be iterated over).  It can be expressed as: for (const/let variableName of arrayName) {.</li>
+                <li>Loops can be controlled in the form of break or continue.  Break statement will immediately exit a loop, and continue statement will immediately skip to the next iteration of the loop.</li>
+                <li>I learned more array methods this week, including concat, sort, reverse, slice, and splice (which can abe used for inserting, adding to, or removing items from an array at any point, not only the beginning or the end.</li> 
+                <li>String methods include indexOf, includes, slice, toLowerCase, toUpperCase, and split.</li>
+                <li>I learned about DOM, the Document Object Model providing an interface between JavaScript and HTML.  According to W3 school, it is an application programming interface (API) for valid HTML and well-formed XML documents.  It defines the logical structure of documents and the way a document is accessed and manipulated.  A tree graph example would be html at the top (root node/parent node of head and body) -> head and body in the middle (child nodes of html).  Head and body in this case are also sibling nodes.</li>
+                <li>As mentioned in the previous point, node relationship properties could include parentNode, firstChild, lastChild, nextSibling, previousSibling, and childNodes.  We can use to reference nodes in relation to each other.</li>
+                <li>4 ways to locate nodes are: traversing the DOM, getElementsByTagName, getElementById, querySelector.</li>
+                <li>4 ways to create and adding nodes are: createElement, createTextNode, insertBefore, and appendChild. </li>
+                <li>3 ways to remove nodes are: remove, removeChild, and firstElementChild.</li>
+                <li>Nodes can also be cloned using cloneNode and cloneNode(true).</li>
+                <li>A few mouse events include onclick, onmousedown, onmouseup, onmouseover, and onmouseout.</li>
+                <li>We can also set time events using setTimeout, clearTimeout, setInterval, and clearInterval.</li>
+                <li>Events can be added or removed using JavaScript via addEventListener and removeEventListener.  One advantage of addEventListener over other ways of adding event handlers is that we can use it to add more than one handler function to the same event, on the same element.</li>
+                <li><strong>Code Challenges:</strong> There was 1 code challenges this week, which can be found in my CodePen: <a href="https://codepen.io/joannahanchang/pen/XWXbzYM">Arrays Practice</a>.</li>
+                <li><strong>Project:</strong> I built a <a href="https://codepen.io/joannahanchang/pen/vYLPqMo?editors=1100">Matching Game</a> using DOM manipulation, adding event listeners, etc.</li>
             </ul>
         </section>
         </div>
