--- a/projects.html
+++ b/projects.html
@@ -48,21 +48,25 @@
                 <p><strong>Technologies used: HTML, CSS, Bootstrap, and JavaScript.</strong></p> 
             </div>
             <div class="col-12 col-sm-6">
-              <h3>YouDance</h3>
-                <a href="https://github.com/joannahanchang/YouDance">
-                <img src="youdance.png" alt="YouDance Project" id="youdance" height="150" width="550" class="center"/>
+              <h3>NuCamp Website</h3>
+                <a href="https://github.com/joannahanchang/Bootstrap-Project-Setup">
+                <img src="nucamp.PNG" alt="NuCamp Website" id="nucamp" height="150" width="550" class="center"/>
                 </a>
-                <p>An on-demand dance fitness video platform for users to search YouTube videos by dance type, intensity level, and number of views.</p>
+                <p>My Bootstrap class project on building the NuCamp Bootcamp's website using various Bootstrap CSS components and Bootstrap JavaScript components.</p>
                 <p>Built within 8 weeks of learning about programming.</p>
                 <p><strong>Technologies used: HTML, CSS, Bootstrap, and JavaScript.</strong></p>
             </div>   
           </div>
           <div class="row">
             <div class="col-12 col-sm-6">
-              <h3>Project in progress!</h3>
-              <p></p>
-              <p></p>
-            </div>
+            <h3>YouDance</h3>
+            <a href="https://github.com/joannahanchang/YouDance">
+            <img src="youdance.png" alt="YouDance Project" id="youdance" height="150" width="550" class="center"/>
+            </a>
+            <p>An on-demand dance fitness video platform for users to search YouTube videos by dance type, intensity level, and number of views.</p>
+            <p>Built within 8 weeks of learning about programming.</p>
+            <p><strong>Technologies used: HTML, CSS, Bootstrap, and JavaScript.</strong></p>
+            </div>   
             <div class="col-12 col-sm-6">
               <h3>Project in progress!</h3>
               <p></p>
