--- a/tech.html
+++ b/tech.html
@@ -24,7 +24,8 @@
 			<a href="30weeks.html">30 Weeks of Coding</a>
 			<a href="projects.html">Projects</a>
 			<a href="about.html">About</a>
-			<a href="tech.html">Tech</a>
+            <a href="tech.html">Tech</a>
+            <a href="https://github.com/joannahanchang">Github</a>
 			<a href="contact.html">Contact</a>
 		</div>
     </div>
