--- a/30weeks.html
+++ b/30weeks.html
@@ -23,7 +23,8 @@
 			<a href="30weeks.html">30 Weeks of Coding</a>
 			<a href="projects.html">Projects</a>
 			<a href="about.html">About</a>
-			<a href="tech.html">Tech</a>
+            <a href="tech.html">Tech</a>
+            <a href="https://github.com/joannahanchang">Github</a>
 			<a href="contact.html">Contact</a>
 		</div>
     </div>
@@ -46,7 +47,7 @@
                 <p>Front-End Web UI Framework, Bootstrap.</p>
             </div>
             <div class="week-box">
-                <p>Weeks 10 - 14:</p>
+                <p><a href="weeks10to14.html">Weeks 10 - 14:</a><p>
                 <p>Front-End JavaScript Library, React.</p>
             </div>
             <div class="week-box">
