--- a/weeks10to14.html
+++ b/weeks10to14.html
@@ -49,7 +49,7 @@
                 <li>Objects can have properties and methods - which are variables and functions that belong to that object.  We can also add custom methods to objects.</li>
                 <li>I learned about the "this" keyword with objects in JavaScript.</li> 
                 <li>I learned about JavaScript classes, which are templates for objects and can be used to create multiple instances of the same kind of object.</li> 
-                <li>I learned about adding default properties with class constructors, and class methods to create class instances (objects) with the new keyword</li>
+                <li>I learned about adding default properties with class constructors, and class methods to create class instances (objects) with the new keyword.</li>
                 <li>I learned about class inheritance, where we could create child classes based on parent classes.  The child class inherits the properties and methods of the parent class.  A child class can also add its own properties and methods without affecting the parent class.  We could also make a child class from a parent class using the extends keyword.</li>
                 <li>The super method is a special method for child constructors to pass those properties that are inherited from the parent class to be initialized in the constructor there.  You must use it with inherited properties, properties that are defined in the parent class' constructor.</li>
                 <li>We reviewed arrays and array methods, including the meaning of the terms higher-order function and callback function.  A higher order function is a function that takes another function as an argument, or returns a function as a return value.  A callback function is a function that is passed into a higher order function as an argument, then used inside it (called back).</li>
@@ -67,6 +67,22 @@
         <br>
         <section id="week11">
             <h4>Week 11:</h4>
+            <ul>
+                <li>I learned about the main difference between libaries and frameworks, which have to do with a concept called inversion of control - you call libraries, but frameworks call you (your code).  Libraries: you have control - you can call the library when you want to use it; frameworks: the framework has control and calls your code when needed.</li>
+                <li>I was introduced to React, which is a library.  Some of its defining features are that it takes a declarative, component-based approach; it is designed for speed, simplicity, and scalability; and it plays well with other technologies.</li>
+                <li>I learned about JSX, which is a syntactic extension to JavaScript created to help write front-end code faster.</li>
+                <li>JSX is syntactic sugar of JavaScript, or a preprocessor language for JavaScript.  We could write our code in one way, then it gets compiled to regular JavaScript on its way to the browser.  JSX syntax is very close to HTML, with some differences.  For examples, className instead of class, htmlFor insted of For - because class and for already have meaning in JavaScripts.</li> 
+                <li>We could embed JavaScript expressions inside JSX using curly braces {}.  When an element has no content, we could write it as a self-closing tag in JSX.</li> 
+                <li>There are import and export keywords in JavaScript allowing files to share data with each other.  The shared data can be objects, primitive, and functions (including classes).  Two kinds of exports: name and default - one file can have many named exports but only one default export.</li>
+                <li>I was introduced to React components, which are similar to functions - repeatable blocks of code.  Like a function, we could define a React component with one syntax then call it with another syntax.</li>
+                <li>I learned that there are 2 ways to define React components - Class component and functional component.</li>
+                <li>For Class component, use the class keyword, along with extends Component, to define a class component.  Component names must be capitalized and contain a return statement - for class components, the return must be wrapped in a render () method.  That return must contain a single React element - which can have other elements and components nested inside it.  Render a component like an HTML tag, with the first letter capitalized, typically (not always) self-closing.</li>
+                <li>I practiced lifting state up from one component to its parent component, then passed the state information down as props, changing references from state to props as appropriate.</li>
+                <li>I learned to set up Reactstrap Card components and added functionality to display more information when user clicks.</li>
+                <li><strong>Code Challenge:</strong> There were 3 challenges this week, which can be found in my CodePen: <a href="https://codepen.io/joannahanchang/pen/WNrVaOO">JSX and State</a>, <a href="https://codepen.io/joannahanchang/pen/pogMqjJ">Constructing Lists</a>, <a href="https://codepen.io/joannahanchang/pen/WNwebKQ">Passing Props</a>.</li>
+                <li><strong>Project:</strong>.</li>
+            </ul>
+        
 
         </section>
         <br>
