--- a/projects.html
+++ b/projects.html
@@ -60,7 +60,7 @@
           </div>
           <div class="row">
             <div class="col-12 col-sm-6">
-            <h3>YouDance</h3>
+            <h3>YouDance - 1</h3>
             <a href="https://github.com/joannahanchang/YouDance">
             <img src="youdance.png" alt="YouDance Project" id="youdance" height="150" width="550" class="center"/>
             </a>
@@ -69,9 +69,10 @@
             <p><strong>Technologies used: HTML, CSS, Bootstrap, and JavaScript.</strong></p>
             </div>   
             <div class="col-12 col-sm-6">
-              <h3>Project in progress!</h3>
-              <p></p>
-              <p></p>
+              <h3>YouDance - 2</h3>
+              <p>An on-demand dance fitness video platform for users to search YouTube videos by dance type, intensity level, and number of views.</p>
+              <p>Built within 14 weeks of learning about programming.</p>
+              <p><strong>Technologies used: HTML, CSS, Bootstrap, JavaScript, and React.</strong></p>
             </div>   
           </div>     
       </div>
