--- a/weeks1to4.html
+++ b/weeks1to4.html
@@ -111,7 +111,7 @@
                 <li>A few mouse events include onclick, onmousedown, onmouseup, onmouseover, and onmouseout.</li>
                 <li>We can also set time events using setTimeout, clearTimeout, setInterval, and clearInterval.</li>
                 <li>Events can be added or removed using JavaScript via addEventListener and removeEventListener.  One advantage of addEventListener over other ways of adding event handlers is that we can use it to add more than one handler function to the same event, on the same element.</li>
-                <li><strong>Code Challenges:</strong> There was 1 code challenges this week, which can be found in my CodePen: <a href="https://codepen.io/joannahanchang/pen/XWXbzYM">Arrays Practice</a>.</li>
+                <li><strong>Code Challenge:</strong> There was 1 code challengeq this week, which can be found in my CodePen: <a href="https://codepen.io/joannahanchang/pen/XWXbzYM">Arrays Practice</a>.</li>
                 <li><strong>Project:</strong> I built a <a href="https://codepen.io/joannahanchang/pen/vYLPqMo?editors=1100">Matching Game</a> using DOM manipulation, adding event listeners, etc.</li>
             </ul>
         </section>
